small fix(graphs were too big imo)

--- a/adminPage/components.css
+++ b/adminPage/components.css
@@ -82,16 +82,17 @@
     color: #333;
 }
 .piechart{
-    width: 400px;
+    width: 350px;
 }
 .graphs {
     display: flex;
     justify-content: space-around;
     margin-top: 20px;
+    margin-left: -50px;
 }
 .line-graph{
-    width: 800px;
-    height: 400px;
+    width: 700px;
+    height: 350px;
 }
 .graph-1{
     display: flex;
@@ -99,9 +100,8 @@
     align-items: center;
     justify-content: center;
     background-color: white;
-    margin-left: -100px;
-    width: 1000px;
-    height: 500px;
+    width: 800px;
+    height: 450px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s ease;
     border: 1px solid #ccc;
@@ -117,8 +117,8 @@
     justify-content: center;
     background-color: white;
     margin-left: -100px;
-    width: 500px;
-    height: 500px;
+    width: 450px;
+    height: 450px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s ease;
     border: 1px solid #ccc;
